| along with this program; if not, write to the Free Software               |
| Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA |
+---------------------------------------------------------------------------+

+---------------------------+
| Release Max v0.3.32-alpha |
+---------------------------+

2007-05-01  Delivery    Bug         Fixed #54 - Cookie deletion not working in IE (Chris)
2007-03-23  Delivery    Bug         Fixed #311 - Loading OA tags into 3rd party server breaks swf
                                    clickthroughs (Chris)
2007-03-23  Delivery    Feature     Fixed #310 - Added {width} and {height} replacement macros (Chris)
2007-03-23  Delivery    Bug         Fixed #309 - Infinite loop in delivery when no ads to deliver (Chris)
2007-03-23  Admin       Bug         Fixed #308 - Some stats screens show error: Missing argument 2 for 
                                    removeduplicateparams() (Chris)
2007-03-13  Delivery    Feature     Fixed #62 - Added XHTML compliance to delivery scripts (Marek)
2007-03-12  Maintenance Bug         Fixed #206 - Ensured that high-priority campaigns with daily targets are
                                    correctly handled, regardless of the status of the start and end dates;
                                    improved high-priority campaign type testing, so that an error can be
                                    logged if required (Andrew)
2007-03-09  Maintenance Bug         Fixed #205 - Daily limited campaigns used all time impressions delivered
                                    instead of "today's" impressions delivered when calculating how many
                                    impressions to deliver for the rest of "today" (Andrew)
2007-03-01  Delivery    Feature     Fixed #35 - Port Google Adsense click tracking to Openads 2.3 (Matteo)
2007-02-27  Admin       Bug         Fixed #134 - Adding new zone breaks when you navigate to another tab