@@ -136,6 +136,11 @@ function _getTimeYearFromNow() //Chris: See comment above
 	return MAX_commonGetTimeNow() + 365*24*60*60;
 }
 
+function _getTimeYearAgo()
+{
+    return MAX_commonGetTimeNow() - 365*24*60*60;
+}
+
 /**
  * This function unpacks the serialized array used for capping
  *
@@ -173,11 +178,10 @@ function MAX_cookieUnpackCapping()
                         $_COOKIE[$cookieName][$adId] = $cookie;
                     }
                 }
-                // FIXME-Andrzej: temporary cookies do not get deleted
                 // Delete the temporary capping cookie
-                MAX_cookieSet("_{$cookieName}[{$adId}]", "0", 1);
+                MAX_cookieSet("_{$cookieName}[{$adId}]", false, _getTimeYearAgo());
                 // Work around a bug in IE where the cookie name is sometimes URL-encoded
-                MAX_cookieSet("%5F" . urlencode($cookieName.'['.$adId.']'), "0", 1);
+                MAX_cookieSet("%5F" . urlencode($cookieName.'['.$adId.']'), false, _getTimeYearAgo());
             }
         }
     }
@@ -279,25 +283,38 @@ function MAX_cookieSendP3PHeaders() {
 function MAX_Delivery_cookie_setCapping($type, $id, $block = 0, $cap = 0, $sessionCap = 0)
 {
     $conf = $GLOBALS['_MAX']['CONF'];
-    if ($block > 0) {
+    if ($block > 0 && $cap == 0 && $sessionCap == 0) {
         // This blocking cookie is limited to 30 days
-        $expire = _getTimeThirtyDaysFromNow();
         // Store a cookie using the current time so that the system knows when
         // the last time this viewer saw this ad, an ad in this campaign or an
         // ad in this zone
-        $timeLastSeen = MAX_commonGetTimeNow();
-        MAX_cookieSet("_{$conf['var']['block' . $type]}[{$id}]", $timeLastSeen, $expire);
+        MAX_cookieSet("_{$conf['var']['block' . $type]}[{$id}]", MAX_commonGetTimeNow(), _getTimeThirtyDaysFromNow());
     }
     if ($cap > 0) {
         // This capping cookie requires a "permanent" expiration time
         $expire = MAX_commonGetTimeNow() + $conf['cookie']['permCookieSeconds'];
-        // The unpack capping cookies function deals with imcrementing the counter
-        MAX_cookieSet("_{$conf['var']['cap' . $type]}[{$id}]", 1, $expire);
+        // The unpack capping cookies function adds this value to the counter, so to reset it we add a negative number
+        if ($_COOKIE[$conf['var']['cap' . $type]][$id] >= $cap) {
+            $value = -$_COOKIE[$conf['var']['cap' . $type]][$id]+1;
+            // Also reset the last-seen when resetting the frequency counter
+            MAX_cookieSet("_{$conf['var']['block' . $type]}[{$id}]", MAX_commonGetTimeNow(), _getTimeThirtyDaysFromNow());
+        } else {
+            $value = 1;
+        }
+        MAX_cookieSet("_{$conf['var']['cap' . $type]}[{$id}]", $value, $expire);
     }
     if ($sessionCap > 0) {
         // The unpack capping cookies function deals with imcrementing the counter
         // The expiry is set to 0 to make a session cookie
-        MAX_cookieSet("_{$conf['var']['sessionCap' . $type]}[{$id}]", 1, 0);
+        // The unpack capping cookies function adds this value to the counter, so to reset it we add a negative number
+        if ($_COOKIE[$conf['var']['sessionCap' . $type]][$id] >= $sessionCap) {
+            $value = -$_COOKIE[$conf['var']['sessionCap' . $type]][$id]+1;
+            // Also reset the last-seen when resetting the frequency counter
+             MAX_cookieSet("_{$conf['var']['block' . $type]}[{$id}]", MAX_commonGetTimeNow(), _getTimeThirtyDaysFromNow());
+        } else {
+            $value = 1;
+        }
+        MAX_cookieSet("_{$conf['var']['sessionCap' . $type]}[{$id}]", $value, 0);
     }
 }
 
