@@ -90,10 +90,8 @@ function MAX_limitationsIsAdForbidden($aAd)
 {
     $adId = $aAd['ad_id'];
     $campaignId = $aAd['placement_id'];
-	return (_limitationsIsAdBlocked($adId, $aAd['block_ad']) ||
-	   _limitationsIsAdCapped($adId, $aAd['cap_ad'], $aAd['session_cap_ad']) ||
-	   _limitationsIsCampaignBlocked($campaignId, $aAd['block_campaign']) ||
-	   _limitationsIsCampaignCapped($campaignId, $aAd['cap_campaign'], $aAd['session_cap_campaign']));
+	return (_limitationsIsAdCapped($adId, $aAd['cap_ad'], $aAd['session_cap_ad'], $aAd['block_ad']) ||
+	   _limitationsIsCampaignCapped($campaignId, $aAd['cap_campaign'], $aAd['session_cap_campaign'], $aAd['block_campaign']));
 }
 
 /**
@@ -113,50 +111,7 @@ function MAX_limitationsIsAdForbidden($aAd)
  */
 function MAX_limitationsIsZoneForbidden($zoneId, $aCapping)
 {
-    return (_limitationsIsZoneBlocked($zoneId, $aCapping['block_zone']) ||
-       _limitationsIsZoneCapped($zoneId, $aCapping['cap_zone'], $aCapping['session_cap_zone']));
-}
-
-/**
- * A "private" function to test if an ad is blocked as a result of an ad block limitation.
- *
- * @access private
- * @param integer $adId The ID of the ad to check.
- * @param integer $block The number of seconds the ad is to be blocked for after it is shown
- *                       to a viewer.
- * @return boolean True if the ad is blocked, false otherwise.
- */
-function _limitationsIsAdBlocked($adId, $block)
-{
-	return _limitationsIsBlocked('Ad', $adId, $block);
-}
-
-/**
- * A "private" function to test if an ad is blocked as a result of a campaign block limitation.
- *
- * @access private
- * @param integer $adId The ID of the campaign to check.
- * @param integer $block The number of seconds the ad is to be blocked for after it is shown
- *                       to a viewer.
- * @return boolean True if the ad is blocked, false otherwise.
- */
-function _limitationsIsCampaignBlocked($campaignId, $block)
-{
-	return _limitationsIsBlocked('Campaign', $campaignId, $block);
-}
-
-/**
- * A "private" function to test if a zone is blocked as a result of a zone block limitation.
- *
- * @access private
- * @param integer $zoneId The ID of the zone to check.
- * @param integer $block The number of seconds the zone is to be blocked for after it is shown
- *                       to a viewer.
- * @return boolean True if the zone is blocked, false otherwise.
- */
-function _limitationsIsZoneBlocked($zoneId, $block)
-{
-	return _limitationsIsBlocked('Zone', $zoneId, $block);
+    return (_limitationsIsZoneCapped($zoneId, $aCapping['cap_zone'], $aCapping['session_cap_zone'], $aCapping['block_zone']));
 }
 
 /**
@@ -170,9 +125,9 @@ function _limitationsIsZoneBlocked($zoneId, $block)
  *                            to a viewer in a session.
  * @return boolean True if the ad is capped, false otherwise.
  */
-function _limitationsIsAdCapped($adId, $cap, $sessionCap = 0)
+function _limitationsIsAdCapped($adId, $cap, $sessionCap = 0, $block)
 {
-	return _limitationsIsCapped('Ad', $adId, $cap, $sessionCap);
+	return _limitationsIsCapped('Ad', $adId, $cap, $sessionCap, $block);
 }
 
 /**
@@ -186,9 +141,9 @@ function _limitationsIsAdCapped($adId, $cap, $sessionCap = 0)
  *                            to a viewer in a session.
  * @return boolean True if the ad is capped, false otherwise.
  */
-function _limitationsIsCampaignCapped($campaignId, $cap, $sessionCap = 0)
+function _limitationsIsCampaignCapped($campaignId, $cap, $sessionCap = 0, $block)
 {
-	return _limitationsIsCapped('Campaign', $campaignId, $cap, $sessionCap);
+	return _limitationsIsCapped('Campaign', $campaignId, $cap, $sessionCap, $block);
 }
 
 /**
@@ -202,37 +157,9 @@ function _limitationsIsCampaignCapped($campaignId, $cap, $sessionCap = 0)
  *                            to a viewer in a session.
  * @return boolean True if the zone is capped, false otherwise.
  */
-function _limitationsIsZoneCapped($zoneId, $cap, $sessionCap = 0)
+function _limitationsIsZoneCapped($zoneId, $cap, $sessionCap = 0, $block)
 {
-	return _limitationsIsCapped('Zone', $zoneId, $cap, $sessionCap);
-}
-
-/**
- * A "private" function to test to see if a block limitation for an ad or zone item needs
- * to be enforced.
- *
- * @access private
- * @param string $type The block limitation type - one of "Ad", "Campaign" or "Zone".
- * @param integer $id The ID of the ad, campaign or zone to check.
- * @param integer $block The number of seconds the ad or zone is to be blocked for after it is
- *                       shown to a viewer.
- * @return boolean True if the ad or zone is blocked, false otherwise.
- */
-function _limitationsIsBlocked($type, $id, $block)
-{
-    // Always return true (blocked) if cookies have been disabled by the viewer
-    if (_areCookiesDisabled($block > 0)) {
-        return true;
-    }
-    // Get the block cookie name from the configuration file
-    $conf = $GLOBALS['_MAX']['CONF'];
-    $cookieName = $conf['var']['block' . $type];
-    // When was the item last seen by the viewer?
-    if (isset($_COOKIE[$cookieName][$id])) {
-        $timeLastSeen = $_COOKIE[$cookieName][$id];
-    }
-    // Return if the item is blocked, or not
-    return ($block > 0) && isset($timeLastSeen) && (($timeLastSeen + $block) > MAX_commonGetTimeNow());
+	return _limitationsIsCapped('Zone', $zoneId, $cap, $sessionCap, $block);
 }
 
 /**
@@ -246,9 +173,10 @@ function _limitationsIsBlocked($type, $id, $block)
  *                     to a viewer.
  * @param integer $sessionCap Optional total number of times an ad or an ad from a zone is
  *                            to be shown to a viewer in a session.
+ * @param integer $block The time period to use for capping tests (seconds)
  * @return boolean True if the ad or zone is capped, false otherwise.
  */
-function _limitationsIsCapped($type, $id, $cap, $sessionCap)
+function _limitationsIsCapped($type, $id, $cap, $sessionCap, $block)
 {
     // Always return true (capped) if cookies have been disabled by the viewer
     if (_areCookiesDisabled(($cap > 0) || ($sessionCap > 0))) {
@@ -262,15 +190,32 @@ function _limitationsIsCapped($type, $id, $cap, $sessionCap)
         $totalImpressions = $_COOKIE[$cookieName][$id];
     }
     // Get the session capping cookie name from the configuration file
-    $conf = $GLOBALS['_MAX']['CONF'];
     $cookieName = $conf['var']['sessionCap' . $type];
     // How many times (session) has the item been by the viewer?
     if (isset($_COOKIE[$cookieName][$id])) {
         $sessionImpressions = $_COOKIE[$cookieName][$id];
     }
-    // Return if the item is capped, or not
-    return ((($cap > 0) && isset($totalImpressions) && ($totalImpressions >= $cap)) ||
-        (($sessionCap > 0) && isset($sessionImpressions) && ($sessionImpressions >= $sessionCap)));
+    // When was the ad last seen
+    $cookieName = $conf['var']['block' . $type];
+    if (isset($_COOKIE[$cookieName][$id])) {
+        $lastSeen = $_COOKIE[$cookieName][$id];
+    }
+    
+    // If the ad has been seen the requisite number of times...
+    if ((($cap > 0) && isset($totalImpressions) && ($totalImpressions >= $cap)) ||
+        (($sessionCap > 0) && isset($sessionImpressions) && ($sessionImpressions >= $sessionCap))) {
+        if ($block > 0 && MAX_commonGetTimeNow() > $lastSeen + $block) {
+            // This ad was last seen outside the block window, so it can now be seen again
+            // The log mechanism will deal with resetting the frequency counter
+            return false;
+        } else {
+            return true;
+        }
+    } else if ($block > 0 && MAX_commonGetTimeNow() <= $lastSeen + $block) {
+        return true;
+    } else {
+        return false;
+    }
 }
 
 /**
